# shrub-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/addition_example/: main.shrub
examples/block_example/: main.shrub
examples/comparison_example/: main.shrub
examples/fibonacci/: loop.shrub  recursive.shrub
examples/fizzbuzz/: main.shrub
examples/function_fun/: main.shrub
examples/if_statements_example/: main.shrub
examples/test/: main.shrub
examples/unary_example/: main.shrub
examples/variable_example/: main.shrub
examples/while_example/: main.shrub
include/compiler/: compiler.h  environment.h  name_resolver.h  scope.h
include/error/: error.h  error_types.h
include/file/: file_read.h
include/objects/: function.h  reference_counter.h  string.h
include/parser/: expressions.h  lexer.h  parser.h  statement_vector.h  statements.h  token.h  token_vector.h
include/parser/hash_tables/: keywords.h
include/utils/: operand_conversion.h  print_statements.h  print_token.h
include/vm/: instruction_buffer.h  opcodes.h  stack.h  values.h  vm.h
include/vm/variables/: environment.h  scope.h  stack_frame.h  upvalues.h
src/: main.c
src/compiler/: compiler.c  envrionment.c  name_resolver.c  scope.c
src/error/: error.c
src/file/: file_read.c
src/objects/: function.c  reference_counter.c  string.c
src/parser/: lexer.c  parser.c  statement_vector.c  token_vector.c
src/parser/hash_tables/: keywords.c
src/utils/: print_statements.c  print_token.c
src/vm/: instruction_buffer.c  stack.c  vm.c
src/vm/variables/: environment.c  scope.c  stack_frame.c  upvalues.c
